Desktop Sharing should work without vino on X
System Info
- Ubuntu 18.10
- mutter 3.30.0 compiled with remote-desktop support
- pipewire 0.2.3-3
- gnome-remote-desktop 0.1.6
- gnome-control-center 3.30.0
Steps to reproduce
- Install gnome-remote-desktop and mutter compiled with remote desktop support
- Uninstall vino
- Restart your computer
- Log in to the Wayland session and turn on Sharing and then turn on Screen Sharing
- Log out then log in to the X session
- From a second computer, connect to the first computer using VNC.
That worked for me, but when I open GNOME Settings in X, there is no Screen Sharing section.
Desired result
Since GNOME Remote Desktop works with X, I expect Settings > Sharing > Screen Sharing to show in X if GNOME Remote Desktop is installed and if mutter supports it.
I request that this change be backported to GNOME 3.30 since 3.30 is the first version of mutter where the remote desktop sharing feature is not hidden behind an experimental gsettings flag.